# imubar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  prj.conf  pyproject.toml  tasks.py
boards/: blackpill_f411ce.overlay
docs/: blackpill_pinout.xcf  i2cmap.txt  i2cmap2.txt  xiao-esp32s3_pinout.xcf
drivers/: CMakeLists.txt  Kconfig
drivers/bma180/: Kconfig
drivers/bno055/: bno055.c  bno055.h
drivers/lsm9ds1_gyro/: Kconfig
drivers/lsm9ds1_mfd/: Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bosch/: CMakeLists.txt  Kconfig
drivers/sensor/bosch/bma180/: CMakeLists.txt  Kconfig  bma180.c  bma180.h  bma180_trigger.c
drivers/sensor/bosch/bmp085/: CMakeLists.txt  Kconfig  bmp085.c  bmp085.h
drivers/sensor/bosch/bno055/: CMakeLists.txt  Kconfig  bno055.c  bno055.h  bno055_trigger.c
drivers/sensor/st/: CMakeLists.txt  Kconfig
drivers/sensor/st/h3lis331dl/: Kconfig  h3lis331dl.c  h3lis331dl.h
drivers/sensor/st/l3gd20h/: CMakeLists.txt  Kconfig  l3gd20h.c  l3gd20h.h
drivers/sensor/st/lsm9ds1/: CMakeLists.txt  Kconfig  lsm9ds1.c  lsm9ds1.h  lsm9ds1_trigger.c
drivers/sensor/st/lsm9ds1_ag/: CMakeLists.txt  Kconfig  lsm9ds1_ag.c  lsm9ds1_ag.h  lsm9ds1_ag_trigger.c
drivers/sensor/st/lsm9ds1_gyro/: lsm9ds1_gyro.c  lsm9ds1_gyro.h  lsm9ds1_gyro_trigger.c
drivers/sensor/st/lsm9ds1_magn/: CMakeLists.txt  Kconfig  lsm9ds1_magn.c  lsm9ds1_magn.h
drivers/sensor/st/lsm9ds1_mfd/: lsm9ds1_mfd.c  lsm9ds1_mfd.h
drivers/sensor/tdk/: CMakeLists.txt  Kconfig
drivers/sensor/tdk/icm20498/: Kconfig
drivers/sensor/tdk/icm20948/: Kconfig  icm20948.c  icm20948.h
drivers/sensor/tdk/itg3205/: CMakeLists.txt  Kconfig  itg3205.c  itg3205.h
dts/bindings/: analog-input.yaml
dts/bindings/sensor/: bosch,bma180.yaml  bosch,bmp085.yaml  bosch,bno055.yaml  invensense,icm20948.yaml  invensense,itg3205.yaml  st,h3lis331dl.yaml  st,l3gd20h.yaml  st,lsm9ds1-ag.yaml  st,lsm9ds1-magn.yaml  st,lsm9ds1.yaml  tdk,icm20948.yaml  tdk,itg3205.yaml
firmware/: blackpill_default_firmware
interface/: .gitignore  CMakeLists.txt  prj.conf
interface/boards/: xiao_esp32s3_procpu.overlay
interface/src/: display.cpp  display.h  errors.cpp  errors.h  main.cpp  watchdog.cpp  watchdog.h
interface/src/fonts/: font_12.c  font_14.c  font_14_bold.c  font_18.c  font_18_bold.c  font_8.c  symbols_14.c  symbols_18.c  symbols_22.c
src/: battery.cpp  battery.h  clock.cpp  clock.h  errors.cpp  errors.h  functions.h  geometry.h  gps.cpp  gps.h  interface.cpp  interface.h  main.cpp  sensors.cpp  sensors.h  serial.cpp  serial.h  storage.cpp  storage.h  types.h  work.cpp  work.h
tests/: pmtkinit.txt
tests/bmp180_test/: CMakeLists.txt  Kconfig  dts  main.cpp  prj.conf
tests/bmp180_test/boards/: blackpill_f411ce.overlay
tests/fp_perf/: CMakeLists.txt  build_esp32.sh  build_microbit.sh  build_pico.sh  build_stm32.sh  main.cpp  prj.conf
tests/fp_perf/boards/bbc_microbit_v2/: bbc_microbit_v2_defconfig
tests/fp_perf/results/: bbc_microbit_v2.txt  blackpill_stm32f411ce.txt  nodemcu_esp32-wroom-32u.txt  rpi_picow_rp2040.txt
tests/rtc_test/: CMakeLists.txt  prj.conf
tests/rtc_test/boards/: blackpill_f411ce.overlay
tests/rtc_test/src/: main.cpp
tests/uart_test/: CMakeLists.txt  prj.conf
tests/uart_test/boards/: blackpill_f411ce.overlay  xiao_esp32s3_procpu.overlay
tests/uart_test/src/: main.cpp
tests/xiao_uart/: prj.conf
tests/xiao_uart/boards/: xiao_esp32s3_procpu.overlay
tests/xiao_uart/src/: main.cpp
